# pyme

./: .gitignore  Cargo.toml  README.md  Shuttle.toml  deploy.py  deploy.sh  release.py  run.py  vercel.json
.github/workflows/: ci.yml  rust.yml  shuttle.yml
api/: db.py  dependencies.py  main.py  models.py  requirements.txt
api/migrations/: env.py
api/migrations/versions/: 017df2672264_init.py  079c83aa0016_user.py  16336fdcf149_additional.py  236039c35ecc_booking.py  b19219500f48_config.py
api/routes/: auth.py  pyme.py
api/test/: test_auth.py  test_pyme.py  test_user.py
client/: .env.development  index.html  package.json  playwright.config.cjs  vite.config.js
client/src/: App.svelte
client/src/lib/: Item.svelte  ItemTable.svelte  Items.svelte  ItemsHeader.svelte  ItemsTable.svelte  Modal.svelte  Working.svelte  itemManager.js  items.js  store.js
client/src/routes/: CustomerItem.svelte  Home.svelte  ItemForm.svelte  Login.svelte  Logout.svelte  NotFound.svelte
client/tests/: home-auth.spec.js  login.spec.js
doc/: audit.sql  import data to postgresql.ipynb  pandas_to_postgresql.ipynb  pyme_audit.sql  pyme_create_db.sql
doc/.ipynb_checkpoints/: pandas_to_postgresql-checkpoint.ipynb
frontend/: .env.production  .gitignore  index.html  package-lock.json  package.json  translate.bat
frontend/src/: App.svelte  app.css
frontend/src/lib/: Error.svelte  Info.svelte  ItemForm.svelte  ItemTable.svelte  Order.svelte  OrderItem.svelte  StatItem.svelte  itemManager.js  store.js
frontend/src/routes/: Home.svelte  ItemForm.svelte  Order.svelte  Profile.svelte  Stats.svelte
frontend/tests/: home-noauth.spec.js
migrations/: 0001_init.sql
rs/: Cargo.toml  Shuttle.toml
rs/migrations/: 20230929200259_init.sql
rs/src/: auth.rs  handler.rs  lib.rs  main.rs  model.rs  route.rs  schema.rs
src/: auth.rs  handler.rs  main.rs  model.rs  route.rs  schema.rs  test.rs
you/: Cargo.toml  app.css  index.html
you/src/: main.rs
