[package]
name = "pyme"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.6.18", features = ["headers"] }
shuttle-axum = "0.27.0"
shuttle-runtime = "0.27.0"
shuttle-secrets = "0.27.0"
shuttle-shared-db = { version = "0.27.0", features = ["postgres"] }
sqlx = { version = "0.7.2", features = ["macros", "postgres", "chrono"] }
tokio = "1.28.2"
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["cors", "fs", "trace"] }
chrono = { version = "0.4.24", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["arbitrary_precision"] }
jsonwebtoken = "8.3"
once_cell = "1.18"
dotenvy = "0.15.7"
argon2 = "0.5.2"

