[package]
name = "pyme"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.4" }
axum-extra = { version = "0.9", features = ["typed-header"] }
shuttle-axum = "0.36"
shuttle-runtime = "0.36"
shuttle-secrets = "0.36"
shuttle-shared-db = { version = "0.36.0", features = ["postgres"] }
sqlx = { version = "0.7.2", features = ["macros", "postgres", "chrono","json"] }
tokio = "1.28.2"
tower = "0.4.13"
tower-http = { version = "0.5.1", features = ["cors", "fs", "trace"] }
chrono = { version = "0.4.24", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value","arbitrary_precision"] }
jsonwebtoken = "9.2"
once_cell = "1.18"
dotenvy = "0.15.7"
argon2 = "0.5.2"

