workspace = { members = ["you"] }
[package]
name = "pyme"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.4" }
axum-extra = { version = "0.9", features = ["typed-header"] }
# shuttle-axum = "0.47"
# shuttle-runtime = "0.47"
shuttle-axum = { git = "https://github.com/shuttle-hq/shuttle" }
shuttle-runtime = { git = "https://github.com/shuttle-hq/shuttle" }
tokio = "1.40.0"
sqlx = { version = "0.7", features = ["macros", "postgres", "chrono", "json", "runtime-tokio", "tls-rustls"] }
tower = "0.5.0"
tower-http = { version = "0.5.1", features = ["cors", "fs", "trace"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = ["raw_value","arbitrary_precision"] }
jsonwebtoken = "9.2"
once_cell = "1.18"
dotenvy = "0.15.7"
argon2 = "0.5.2"

