[package]
name = "pymers"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { path = "../../axum/axum" }
axum-extra = { path = "../../axum/axum-extra" , features = ["typed-header"] }
chrono = { version = "0.4.24", features = ["serde"] }
dotenv = "0.15.0"
jsonwebtoken = "8.3"
once_cell = "1.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio","tls-native-tls", "postgres", "chrono"] }
tokio = { version = "1", features = ["full"] }
tower = "0.4.13"
tower-http = { version = "0.4.0", features = ["cors", "fs", "trace"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
shuttle-axum = "0.27.0"
shuttle-runtime = "0.27.0"
